fixed page overflow

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  padding-left: 2.4rem;
 }
 
 .add-book > button {
@@ -75,6 +74,7 @@ body {
   border-radius: 10px;
   background: transparent;
   padding: 0;
+  margin-left: 2.4rem;
   cursor: pointer;
   box-shadow: 0px 2px 5px var(--neutral-clr-900);
   text-transform: uppercase;
